2009-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: Ensure backward-compatible semantics.
	For each test in Automake's test suite that uses TESTS, generate
	an identical one that uses the `parallel-tests' option, for
	coverage of backward-compatible functionality.
	* tests/gen-parallel-tests: New file, generates distributed
	Makefile.am snippet tests/parallel-tests.am to list all tests
	that use the TESTS interface but not yet the `parallel-tests'
	option, with names mangled to use suffix `-p.test', in ...
	(parallel_tests): ... this new make macro.
	* tests/Makefile.am ($(srcdir)/parallel-tests.am)
	($(parallel_tests), defs-p): New rules.
	(TESTS): Add check11.test and $(parallel_tests).
	(check_SCRIPTS): Add defs-p, $(parallel_tests).
	(check-clean-local): Remove `defs-p'.
	(EXTRA_DIST): Distribute gen-parallel-tests.
	(MAINTAINERCLEANFILES): New variable, remove $(parallel_tests).
	* bootstrap: Generate parallel-tests.am.
	* tests/check8.test: Check for circular dependencies in rules.
	* tests/check11.test: New test, check that SKIPs are not counted
	as passed tests.
	* tests/defs.in: Unset DISABLE_HARD_ERRORS, LAZY_TEST_SUITE,
	VERBOSE, so the tests are not influenced by the way our test
	suite is invoked.

2009-03-08  Akim Demaille  <akim@lrde.epita.fr>
	    Jim Meyering  <jim@meyering.net>
	    Benoit Sigoure  <tsuna@lrde.epita.fr>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Parallel test execution: new option `parallel-tests'.
	* automake.in (handle_tests): Set new conditional PARALLEL_TESTS
	when reading check.am.  Handle option `parallel-tests' and all
	its new semantics.  Define macros TEST_SUFFIXES, TEST_SUITE_LOG,
	TEST_SUITE_HTML, TEST_LOGS, TEST_LOGS_TMP, suffix rules if
	applicable, and per-target rules for other tests.  Add all log
	files to %clean_files at the `MOSTLY_CLEAN' level.
	* lib/Automake/Options.pm (_process_option_list): Accept
	`parallel-tests'.
	* lib/am/check.am [!PARALLEL_TESTS] (check-TESTS): Move existing