@@ -186,6 +186,16 @@ do
       rm -rf $ro_dir_temp
       test $create_status = 0 && exit 77
       ;;
+    rst2html)
+      # Try the variants that are tried in check.am.
+      while :; do
+	for r2h in $RST2HTML rst2html rst2html.py; do
+	  echo "$me: running $r2h --version"
+	  $r2h --version && break 2
+	done
+	exit 77
+      done
+      ;;
     runtest)
       # DejaGnu's runtest program. We rely on being able to specify
       # the program on the runtest command-line. This requires
