@@ -1,5 +1,17 @@
 2009-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	New tests for `parallel-tests'.
+	* tests/parallel-tests.test: New file, to expose a bunch of
+	features of `parallel-tests': VERBOSE, clean, TEST_SUITE_LOG,
+	test dependencies, DISABLE_HARD_ERRORS.
+	* tests/parallel-tests2.test: New file, test check-html.
+	* tests/parallel-tests3.test: New file, test concurrency.
+	* tests/parallel-tests4.test: New file, test suffix rules.
+	* tests/parallel-tests5.test: New file, demonstrate compile/test
+	concurrency.
+	* tests/defs.in: Add a `required' check for rst2html.
+	* tests/Makefile.am: Update.
+
 	parallel-tests: Ensure backward-compatible semantics.
 	For each test in Automake's test suite that uses TESTS, generate
 	an identical one that uses the `parallel-tests' option, for
